--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 body {
     background: var(--bg-color);
     height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -38,7 +39,9 @@ body {
     position: fixed;
     transform-origin: bottom right;
     transform: scale(0);
-    inset: auto -3rem 4.5rem auto;
+    bottom: 8%;
+    right: 1.2%;
+    /* inset:   auto  -3rem auto 1.5rem; */
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     transition: var(--transition);
 
@@ -47,6 +50,9 @@ body {
 /* ==============================body css end code =================================== */
 
 /* ==========================toggle start button========================== */
+
+
+
 /* .message-open-btn::before {
     content: "9+";
     height: 15px;
@@ -111,6 +117,10 @@ body {
     border-radius: 50%;
 }
 
+.icon {
+    position: relative;
+}
+
 .toggle {
     padding: 10px 15px;
     background: var(--header-icon);
@@ -119,17 +129,27 @@ body {
     position: relative;
 }
 
+.toggle i:nth-child(1) {
+    padding: 0px 3px ;
+}
+
 .menu {
     position: absolute;
     height: 80px;
-    transform-origin: top right;
-    transform: scaleY(0) translateX(-50px);
+    transform-origin: top center;
+    transform: scaleY(0);
+    top: 110%;
+    right: 50%;
     padding: 5px;
     border-radius: 5px;
     background: var(--bg-color);
     color: white;
     transition: var(--transition);
     z-index: 10;
+    -webkit-transform: scaleY(0);
+    -moz-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    -o-transform: scaleY(0);
 }
 
 .on {
